# agenda

./: .coverage  .gitignore  AGENTS.md  README.md  agenda.py  pyproject.toml
.github/workflows/: ci.yml
agenda/: __init__.py  __main__.py  agenda_api.py  agent.py  cli.py  compaction.py  const.py  daemon.py  guardian.py  hook.py  hooks.py  metrics.py  models.py  scheduler.py  security.py  session.py  subagent.py  tools.py
agenda/prompts/: system.md
demo-agent-compare/: dag.yaml
docs/: DAG_FORMAT.md  EVALUATION.md  agenda-design.md  cli-design.md  design-recursive-math.md  design.md  multi-agent-runtime-ad.md  research-agent-loop-design.md  research-context-compaction.md  research-subagent-scheduling.md  tech-selection.md  visualization-mermaid.md  visualization.html
tests/: test_agenda_api.py  test_agent.py  test_cli.py  test_compaction.py  test_daemon.py  test_e2e_live.py  test_guardian.py  test_hook.py  test_integration.py  test_metrics.py  test_scheduler.py  test_session.py
