[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenda"
version = "0.0.4"
description = "给 Agent 调度 Agent 的极简 DAG 运行时"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "jeezrick"},
]
keywords = ["agent", "dag", "orchestration", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[project.scripts]
agenda = "agenda:cli"

[project.urls]
Homepage = "https://github.com/jeezrick/agenda"
Repository = "https://github.com/jeezrick/agenda"
Issues = "https://github.com/jeezrick/agenda/issues"
