[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "agenda"
version = "0.0.6"
description = "给 Agent 调度 Agent 的极简 DAG 运行时"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "jeezrick"},
]
keywords = ["agent", "dag", "orchestration", "llm", "multi-agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "pyyaml>=6.0",
    "jinja2>=3.0",
]

[project.optional-dependencies]
openai = ["openai>=1.0"]

[project.scripts]
agenda = "agenda:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--ignore=reference"

[tool.ruff]
target-version = "py310"
line-length = 120
lint.select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # Pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "SIM", # flake8-simplify
]
lint.ignore = [
    "E501",  # line too long (handled by formatter)
    "E402",  # module import not at top (docstrings are normal)
    "N806",  # variable in function should be lowercase (constants like WHITE/GRAY/BLACK are fine)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
warn_redundant_casts = true
warn_unused_ignores = true
show_error_codes = true
ignore_missing_imports = true

[project.urls]
Homepage = "https://github.com/jeezrick/agenda"
Repository = "https://github.com/jeezrick/agenda"
Issues = "https://github.com/jeezrick/agenda/issues"
